--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>classroom-Dahsboard</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+     </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
